derive-ex-tests/tests/compile_fail/compare_op/variant_ignore.rs
use derive_ex::derive_ex;

#[derive_ex(PartialEq)]
enum X {
    #[partial_eq(ignore)]
    A,
}

fn main() {}
