derive-ex-tests/tests/compile_fail/compare_op/variant_ignore.stderr
error: cannot specify `ignore` for enum variants
 --> tests/compile_fail/compare_op/variant_ignore.rs:5:18
  |
5 |     #[partial_eq(ignore)]
  |                  ^^^^^^
